--- a/portafolio.html
+++ b/portafolio.html
@@ -33,22 +33,22 @@
                 <a href="https://www.linkedin.com/in/jacarandapm/" target="_blank" >Linkedin</a>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Uppgift_1/images/gymprogram.gif" 
-                alt="database" width=680 height=380> 
+            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/gameof15.gif" 
+                alt="gymprogram" width=680 height=380> 
         <div class="photofoot">Client registry program</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Uppgift_1/images/gameof15.gif" alt="gameof15" width=680
+            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/gameof15.gif" alt="gameof15" width=680
                 height=380> 
         <div class="photofoot">Game of 15th</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Uppgift_1/images/database.png" alt="database" width=680
+            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/database.png" alt="database" width=680
                 height=380>
         <div class="photofoot">Working with Java and MySQL</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Uppgift_1/images/server.png" alt="server" width=680
+            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/server.png" alt="server" width=680
                 height=380>
         <div class="photofoot">Working on the server side of a game</div>
         </div>
