--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
         <h1>Jacaranda Pérez</h1>
         <div class="profilepic">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/jacaranda.jpg" alt="Jacaranda" width="310" height="380">
+            <img src="images/jacaranda.jpg" alt="Jacaranda" width="310" height="380">
         <div class="photofoot-profile">
             Super power: to choose good avocados
         </div> </div>
