--- a/portafolio.html
+++ b/portafolio.html
@@ -19,7 +19,7 @@
             <a href="contact.html">Contact</a>
         </nav>
         <h1>Projects</h1>
-        <h2>Some of my projects</h2>
+        <h2>Some of my projects:</h2>
         <div class="myprojects" >
             <ul>
                 <li>Gym registry program</li>
@@ -31,24 +31,25 @@
                 <h2>For more details see:</h2>
                 <a href="https://github.com/JacarandaP" target="_blank">GitHub</a> <br>
                 <a href="https://www.linkedin.com/in/jacarandapm/" target="_blank" >Linkedin</a>
+                <h2>A bit of my work:</h2>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/gymprogram.gif" 
+            <img src="images/gymprogram.gif" 
                 alt="gymprogram" width=680 height=380> 
         <div class="photofoot">Client registry program</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/gameof15.gif" alt="gameof15" width=680
+            <img src="images/gameof15.gif" alt="gameof15" width=680
                 height=380> 
         <div class="photofoot">Game of 15th</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/database.png" alt="database" width=680
+            <img src="images/database.png" alt="database" width=680
                 height=380>
         <div class="photofoot">Working with Java and MySQL</div>
         </div>
         <div class="gallery">
-            <img src="C:/Users/jacky/Documents/Nackademin/Klientutveckling/Hemsidan/Webpage/images/server.png" alt="server" width=680
+            <img src="images/server.png" alt="server" width=680
                 height=380>
         <div class="photofoot">Working on the server side of a game</div>
         </div>
