--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <a href="index.html">Home</a>
-            <a href="portfolio.html"> Portafolio</a>
+            <a href="portfolio.html"> Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
         <h1>Jacaranda Pérez</h1>
